fixing local function error

--- a/02_Source_Sink_FreeStream.ipynb
+++ b/02_Source_Sink_FreeStream.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:b0929b838ab4003189c0a894f9be08269929ff4d298190e5b54afd73ce5de627"
+  "signature": "sha256:6179bae6f117fd12c74380d5461937f3ba5b101f3c75432ffaea9d6d0846f3ea"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -155,7 +155,7 @@
       "# computes the stream-function\n",
       "psi_source = sf_source_sink(strength_source, x_source, y_source, X, Y)\n",
       "\n",
-      "#u_free, v_free, psi_free = uniform_flow(u_inf,alpha,N,X,Y)\n",
+      "#u_free, v_free, psi_free = uniform_flow_alpha(u_inf,alpha,N,X,Y)\n",
       "#I dont get red line outlining circle when incorporating alpha\n",
       "\n",
       "# computes the freestream velocity field\n",
