--- a/05_Lesson05_InfiniteRowOfVortices.ipynb
+++ b/05_Lesson05_InfiniteRowOfVortices.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:2d35605b84920fb079b046f53aa8fe90571e5cdb6f8616b5228693eb3779a5b4"
+  "signature": "sha256:77a86b17aa21211e8126129d53eb7928694ee04b4c8e6e6a299dd70a2b30a1a7"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -183,7 +183,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 6
+     "prompt_number": 1
     },
     {
      "cell_type": "code",
@@ -208,7 +208,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 7
+     "prompt_number": 2
     },
     {
      "cell_type": "code",
@@ -255,10 +255,12 @@
       "    \n",
       "    psi_v = np.zeros((N,N), dtype = float)\n",
       "    psi_all = np.zeros((N,N), dtype = float)\n",
-      "    print(type(psi_all))\n",
+      "    print(psi_all.dtype)\n",
       "    \n",
       "    for i in range(0,len(strength)):\n",
       "        psi_v = sf_vortex(strength[i], xv[i], yv[i], X, Y)\n",
+      "        #print(dtype(psi_all))\n",
+      "        print(dtype(psi_v))\n",
       "        psi_all += psi_v\n",
       "    \n",
       "    return psi_all"
@@ -266,7 +268,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 8
+     "prompt_number": 19
     },
     {
      "cell_type": "code",
@@ -289,7 +291,8 @@
        "output_type": "stream",
        "stream": "stdout",
        "text": [
-        "<type 'numpy.ndarray'>\n"
+        "float64\n",
+        "float64\n"
        ]
       },
       {
@@ -298,13 +301,13 @@
        "output_type": "pyerr",
        "traceback": [
         "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m\n\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-        "\u001b[1;32m<ipython-input-9-89fc1000d0db>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[0mv\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mv_vortices\u001b[0m \u001b[1;33m+\u001b[0m \u001b[0mv_free\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      6\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 7\u001b[1;33m \u001b[0mpsi_vortices\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0msf_vort_combined\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mvort_strength\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mxv\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0myv\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mX\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mY\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mN\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      8\u001b[0m \u001b[0mpsi\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mpsi_vorties\u001b[0m \u001b[1;33m+\u001b[0m \u001b[0mpsi_free\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-        "\u001b[1;32m<ipython-input-8-9af04bbe7049>\u001b[0m in \u001b[0;36msf_vort_combined\u001b[1;34m(strength, xv, yv, X, Y, N)\u001b[0m\n\u001b[0;32m     44\u001b[0m     \u001b[1;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mlen\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mstrength\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     45\u001b[0m         \u001b[0mpsi_v\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0msf_vortex\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mstrength\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mi\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mxv\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mi\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0myv\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mi\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mX\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mY\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 46\u001b[1;33m         \u001b[0mpsi_all\u001b[0m \u001b[1;33m+=\u001b[0m \u001b[0mpsi_v\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     47\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     48\u001b[0m     \u001b[1;32mreturn\u001b[0m \u001b[0mpsi_all\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+        "\u001b[1;32m<ipython-input-20-89fc1000d0db>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[0mv\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mv_vortices\u001b[0m \u001b[1;33m+\u001b[0m \u001b[0mv_free\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      6\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 7\u001b[1;33m \u001b[0mpsi_vortices\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0msf_vort_combined\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mvort_strength\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mxv\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0myv\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mX\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mY\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mN\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      8\u001b[0m \u001b[0mpsi\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mpsi_vorties\u001b[0m \u001b[1;33m+\u001b[0m \u001b[0mpsi_free\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+        "\u001b[1;32m<ipython-input-19-13f5c4018709>\u001b[0m in \u001b[0;36msf_vort_combined\u001b[1;34m(strength, xv, yv, X, Y, N)\u001b[0m\n\u001b[0;32m     46\u001b[0m         \u001b[1;31m#print(dtype(psi_all))\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     47\u001b[0m         \u001b[1;32mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mdtype\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mpsi_v\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 48\u001b[1;33m         \u001b[0mpsi_all\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mpsi_all\u001b[0m \u001b[1;33m+\u001b[0m \u001b[0mpsi_v\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     49\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     50\u001b[0m     \u001b[1;32mreturn\u001b[0m \u001b[0mpsi_all\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
         "\u001b[1;31mTypeError\u001b[0m: unsupported operand type(s) for +: 'float' and 'NoneType'"
        ]
       }
      ],
-     "prompt_number": 9
+     "prompt_number": 20
     },
     {
      "cell_type": "code",
