Adding response to question

--- a/05_Lesson05_InfiniteRowOfVortices.ipynb
+++ b/05_Lesson05_InfiniteRowOfVortices.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:993987bad3cc7d6cb1e5ded94a1a87bf4c41f0af77b02bea4ae86ffcb9252ba4"
+  "signature": "sha256:702362a0f0d39cf96d57374a3452d2af3a3cd23001c8e001820ad123aea080ac"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -456,9 +456,14 @@
      "source": [
       "Now that we have derived the functions for the velocity components, implement them in a code cell and plot the streamlines. \n",
       "\n",
-      "Can you see any difference with the previous task where the number of vortices was finite?\n",
-      "\n",
-      "    Yes, the use of the infinte solutions creates a much \"flatter\" solution i.e. most of the velocity is in the x direction. This is what we want and is the main difference from the finite solution which had significant curvature and edge effects."
+      "Can you see any difference with the previous task where the number of vortices was finite?"
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "Yes, the use of the infinte solutions creates a much \"flatter\" solution i.e. most of the velocity is in the x direction. This is what we want and is the main difference from the finite solution which had significant curvature and edge effects."
      ]
     },
     {
