--- a/01_Source_Sink.ipynb
+++ b/01_Source_Sink.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:eaddae7fb240f4c002a92d512763208124cbc407eedca928733078b21b680650"
+  "signature": "sha256:acd8625fe329d64174f7894e858dd26babaa7d50464b4ec2c7d61b8fd0c50484"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -366,7 +366,7 @@
      "input": [
       "from IPython.core.display import HTML\n",
       "def css_styling():\n",
-      "    styles = open('custom.css', 'r').read()\n",
+      "    styles = open('./resources/custom.css', 'r').read()\n",
       "    return HTML(styles)\n",
       "css_styling()"
      ],
@@ -374,18 +374,160 @@
      "metadata": {},
      "outputs": [
       {
-       "ename": "IOError",
-       "evalue": "[Errno 2] No such file or directory: 'custom.css'",
-       "output_type": "pyerr",
-       "traceback": [
-        "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m\n\u001b[1;31mIOError\u001b[0m                                   Traceback (most recent call last)",
-        "\u001b[1;32m<ipython-input-14-6e0370214c4d>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      3\u001b[0m     \u001b[0mstyles\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mopen\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'custom.css'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m'r'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mread\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m     \u001b[1;32mreturn\u001b[0m \u001b[0mHTML\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mstyles\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 5\u001b[1;33m \u001b[0mcss_styling\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-        "\u001b[1;32m<ipython-input-14-6e0370214c4d>\u001b[0m in \u001b[0;36mcss_styling\u001b[1;34m()\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[1;32mfrom\u001b[0m \u001b[0mIPython\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mcore\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mdisplay\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mHTML\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[1;32mdef\u001b[0m \u001b[0mcss_styling\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 3\u001b[1;33m     \u001b[0mstyles\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mopen\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'custom.css'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m'r'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mread\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      4\u001b[0m     \u001b[1;32mreturn\u001b[0m \u001b[0mHTML\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mstyles\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[0mcss_styling\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-        "\u001b[1;31mIOError\u001b[0m: [Errno 2] No such file or directory: 'custom.css'"
+       "html": [
+        "<link href='http://fonts.googleapis.com/css?family=Fenix' rel='stylesheet' type='text/css'>\n",
+        "<link href='http://fonts.googleapis.com/css?family=Alegreya+Sans:100,300,400,500,700,800,900,100italic,300italic,400italic,500italic,700italic,800italic,900italic' rel='stylesheet' type='text/css'>\n",
+        "<link href='http://fonts.googleapis.com/css?family=Source+Code+Pro:300,400' rel='stylesheet' type='text/css'>\n",
+        "<style>\n",
+        "\n",
+        "@font-face {\n",
+        "    font-family: \"Computer Modern\";\n",
+        "    src: url('http://mirrors.ctan.org/fonts/cm-unicode/fonts/otf/cmunss.otf');\n",
+        "}\n",
+        "\n",
+        "\n",
+        "#notebook_panel { /* main background */\n",
+        "    background: rgb(245,245,245);\n",
+        "}\n",
+        "\n",
+        "div.cell { /* set cell width */\n",
+        "    width: 750px;\n",
+        "}\n",
+        "\n",
+        "div #notebook { /* centre the content */\n",
+        "    background: #fff; /* white background for content */\n",
+        "    width: 1000px;\n",
+        "    margin: auto;\n",
+        "    padding-left: 0em;\n",
+        "}\n",
+        "\n",
+        "#notebook li { /* More space between bullet points */\n",
+        "margin-top:0.8em;\n",
+        "}\n",
+        "\n",
+        "/* draw border around running cells */\n",
+        "div.cell.border-box-sizing.code_cell.running { \n",
+        "    border: 1px solid #111;\n",
+        "}\n",
+        "\n",
+        "/* Put a solid color box around each cell and its output, visually linking them*/\n",
+        "div.cell.code_cell {\n",
+        "    background-color: rgb(256,256,256); \n",
+        "    border-radius: 0px; \n",
+        "    padding: 0.5em;\n",
+        "    margin-left:1em;\n",
+        "    margin-top: 1em;\n",
+        "}\n",
+        "\n",
+        "\n",
+        "div.text_cell_render{\n",
+        "    font-family: 'Alegreya Sans' sans-serif;\n",
+        "    line-height: 140%;\n",
+        "    font-size: 125%;\n",
+        "    font-weight: 400;\n",
+        "    width:600px;\n",
+        "    margin-left:auto;\n",
+        "    margin-right:auto;\n",
+        "}\n",
+        "\n",
+        "/* Formatting for header cells */\n",
+        ".text_cell_render h1 {\n",
+        "    font-family: 'Alegreya Sans', sans-serif;\n",
+        "    font-style:regular;\n",
+        "    font-weight: 200;    \n",
+        "    font-size: 50pt;\n",
+        "    line-height: 100%;\n",
+        "    color:#CD2305;\n",
+        "    margin-bottom: 0.5em;\n",
+        "    margin-top: 0.5em;\n",
+        "    display: block;\n",
+        "}\t\n",
+        ".text_cell_render h2 {\n",
+        "    font-family: 'Fenix', serif;\n",
+        "    font-size: 22pt;\n",
+        "    line-height: 100%;\n",
+        "    margin-bottom: 0.1em;\n",
+        "    margin-top: 0.3em;\n",
+        "    display: block;\n",
+        "}\t\n",
+        "\n",
+        ".text_cell_render h3 {\n",
+        "    font-family: 'Fenix', serif;\n",
+        "    margin-top:12px;\n",
+        "\tfont-size: 16pt;\n",
+        "    margin-bottom: 3px;\n",
+        "    font-style: regular;\n",
+        "}\n",
+        "\n",
+        ".text_cell_render h4 {    /*Use this for captions*/\n",
+        "    font-family: 'Fenix', serif;\n",
+        "    font-size: 2pt;\n",
+        "    text-align: center;\n",
+        "    margin-top: 0em;\n",
+        "    margin-bottom: 2em;\n",
+        "    font-style: regular;\n",
+        "}\n",
+        "\n",
+        ".text_cell_render h5 {  /*Use this for small titles*/\n",
+        "    font-family: 'Alegreya Sans', sans-serif;\n",
+        "    font-weight: 300;\n",
+        "    font-size: 16pt;\n",
+        "    color: #CD2305;\n",
+        "    font-style: italic;\n",
+        "    margin-bottom: .5em;\n",
+        "    margin-top: 0.5em;\n",
+        "    display: block;\n",
+        "}\n",
+        "\n",
+        ".text_cell_render h6 { /*use this for copyright note*/\n",
+        "    font-family: 'Source Code Pro', sans-serif;\n",
+        "    font-weight: 300;\n",
+        "    font-size: 9pt;\n",
+        "    line-height: 100%;\n",
+        "    color: grey;\n",
+        "    margin-bottom: 1px;\n",
+        "    margin-top: 1px;\n",
+        "}\n",
+        "\n",
+        "    .CodeMirror{\n",
+        "            font-family: \"Source Code Pro\";\n",
+        "\t\t\tfont-size: 90%;\n",
+        "    }\n",
+        "/*    .prompt{\n",
+        "        display: None;\n",
+        "    }*/\n",
+        "\t\n",
+        "    \n",
+        "    .warning{\n",
+        "        color: rgb( 240, 20, 20 )\n",
+        "        }  \n",
+        "</style>\n",
+        "<script>\n",
+        "    MathJax.Hub.Config({\n",
+        "                        TeX: {\n",
+        "                           extensions: [\"AMSmath.js\"], \n",
+        "                           equationNumbers: { autoNumber: \"AMS\", useLabelIds: true}\n",
+        "                           },\n",
+        "                tex2jax: {\n",
+        "                    inlineMath: [ ['$','$'], [\"\\\\(\",\"\\\\)\"] ],\n",
+        "                    displayMath: [ ['$$','$$'], [\"\\\\[\",\"\\\\]\"] ]\n",
+        "                },\n",
+        "                displayAlign: 'center', // Change this to 'center' to center equations.\n",
+        "                \"HTML-CSS\": {\n",
+        "                    styles: {'.MathJax_Display': {\"margin\": 4}}\n",
+        "                }\n",
+        "        });\n",
+        "</script>\n"
+       ],
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 1,
+       "text": [
+        "<IPython.core.display.HTML at 0x7f77add294d0>"
        ]
       }
      ],
-     "prompt_number": 14
+     "prompt_number": 1
     },
     {
      "cell_type": "code",
