fix typo in lesson 10, begin work on lesson 11

--- a/10_Source_Panel_Method.ipynb
+++ b/10_Source_Panel_Method.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:9737a15688a88100b7c1bb561a635413f3032dd77eba4990dc19d7d53d759426"
+  "signature": "sha256:d8b55f30432dc692b43d8d68bb5e2ee5d52d0f20b41ed167d7fde47767309294"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -139,7 +139,7 @@
       "        a = (y[I+1]-y[I])/(x[I+1]-x[I])\n",
       "        b = y[I+1] - a*x[I+1]\n",
       "        y_ends[i] = a*x_ends[i] + b\n",
-      "    y_ends[N] = y_ends[0] # fist and last points must be the same to meet\n",
+      "    y_ends[N] = y_ends[0] # first and last points must be the same to meet\n",
       "    \n",
       "    panels = np.empty(N, dtype=object)\n",
       "    for i in range(N):\n",
