09 challenge taks finished, matplotlib inline added to VLM

--- a/VLM.ipynb
+++ b/VLM.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:c9ddc2f07f1f448064ad06e402048c9155923affcf49057f94abd3f624ed20dc"
+  "signature": "sha256:ca1dba27f21b992344c801863e3feac5373ffbe220117a31740cd2ba68be773c"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -395,7 +395,8 @@
      "input": [
       "import numpy as np\n",
       "import math\n",
-      "import scipy as sp"
+      "import scipy as sp\n",
+      "# use %matplotlib inline"
      ],
      "language": "python",
      "metadata": {},
