initial commit of last notebook and supporting files

--- a/11_Lesson11_Exercise.ipynb
+++ b/11_Lesson11_Exercise.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:d39b21ea7317519fac5a906d68a579ff377e4eba99d059f10e0a6e06c043f728"
+  "signature": "sha256:c88fc591b4532b1ef5c9adbc35e47a1103a86d5a006b75b1cf1f5ded202b21f7"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -679,13 +679,13 @@
        ],
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 3,
+       "prompt_number": 1,
        "text": [
-        "<IPython.core.display.HTML at 0x7fc27d55e290>"
+        "<IPython.core.display.HTML at 0x7f51ac5606d0>"
        ]
       }
      ],
-     "prompt_number": 3
+     "prompt_number": 1
     },
     {
      "cell_type": "code",
