Splitting Equation over two lines

--- a/VLM.ipynb
+++ b/VLM.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:67bff2d121c12090cc7397a450909e7f80ea831c9364fb5d7400e5a89013339b"
+  "signature": "sha256:c021e425e75b0b643bc11851695f361389d7683baeda2c043f8e3d94ee9273ed"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -339,7 +339,9 @@
       "That takes care of the induced velocity calculations, but did you notice that we have a problem? We don't have the strengths of the vortices! However, we can find the strengths by using the same boundary condition we did in our basic panel method. We set the flow to be tangent to the wing at every control point. For an arbitraritly shaped wing this boundary condition is satisfied by the equation:\n",
       "\n",
       "\\begin{equation}\n",
-      "-u_m \\sin \\delta \\cos \\phi - v_m \\cos \\delta sin \\phi + w_m \\cos \\phi \\cos \\delta  + U_{\\infty}\\sin \\left(\\alpha - \\delta\\right) \\cos \\phi = 0\n",
+      "\\begin{split}\n",
+      "-u_m \\sin \\delta \\cos & \\phi - v_m \\cos \\delta sin \\phi + w_m \\cos \\phi \\cos \\delta\\\\  & + U_{\\infty}\\sin \\left(\\alpha - \\delta\\right) \\cos \\phi = 0\n",
+      "\\end{split}\n",
       "%\\label{eq:gen_BCs}\n",
       "\\end{equation}\n",
       "\n",
